[gd_scene load_steps=13 format=3 uid="uid://co7lfv01d6asm"]

[ext_resource type="PackedScene" uid="uid://b868v1aejh2ne" path="res://Lukasz/MapGameJamPreRelease.glb" id="1_75ffk"]
[ext_resource type="PackedScene" uid="uid://liq5gjvkx1s8" path="res://scenes/Player.tscn" id="1_qgk7k"]
[ext_resource type="PackedScene" uid="uid://bkp42bld4138q" path="res://Elias/Models/low_poly_torches.glb" id="2_mbleo"]
[ext_resource type="Script" path="res://Elias/Scripts/touchable.gd" id="4_6nvnc"]
[ext_resource type="Texture2D" uid="uid://da74n2ld7sa1t" path="res://Elias/Assets/Logo.png" id="5_ri4j6"]

[sub_resource type="Environment" id="Environment_i53wi"]
background_color = Color(0, 1, 0.833333, 1)
volumetric_fog_enabled = true
volumetric_fog_albedo = Color(1, 0.7365, 0.49, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_emilf"]
size = Vector3(5.11823, 1, 7.05066)

[sub_resource type="BoxMesh" id="BoxMesh_bvu3m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lbioy"]
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_8hmfb"]
resource_name = "Fade"
length = 1.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1, 1.73333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_c5jlt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_edfyt"]
_data = {
"Fade": SubResource("Animation_8hmfb"),
"RESET": SubResource("Animation_c5jlt")
}

[node name="Start" type="Node3D"]

[node name="Pyramid" parent="." instance=ExtResource("1_75ffk")]

[node name="CharacterBody3D" parent="." instance=ExtResource("1_qgk7k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50.2074, 3.20971)

[node name="Torch" parent="." instance=ExtResource("2_mbleo")]
transform = Transform3D(0.0263038, -0.0478212, 0.99851, 0.00125932, 0.998856, 0.0478046, -0.999653, 0, 0.0263339, 1.545, 48.4289, 16.8466)

[node name="Sketchfab_model" parent="Torch" index="0"]
transform = Transform3D(-0.5, 4.37114e-08, 0, 1.91069e-15, 2.18557e-08, 0.5, 4.37114e-08, 0.5, -2.18557e-08, 1.36181, 0.628685, -2.27702)

[node name="OmniLight3D" type="OmniLight3D" parent="Torch"]
transform = Transform3D(1, 1.16322e-10, 0, 4.03705e-14, 1, 7.45365e-09, 0, -7.45364e-09, 1, 1.37797, 1.52407, -4.21822)
light_color = Color(1, 0.6895, 0.31, 1)
omni_range = 12.4328

[node name="Torch2" parent="." instance=ExtResource("2_mbleo")]
transform = Transform3D(-0.0118293, 0.0243225, -0.999634, 0.000981517, 0.999704, 0.0243125, 0.99993, -0.000693557, -0.0118497, -1.54774, 48.4289, 9.48612)

[node name="Sketchfab_model" parent="Torch2" index="0"]
transform = Transform3D(-0.5, 4.37114e-08, 0, 1.91069e-15, 2.18557e-08, 0.5, 4.37114e-08, 0.5, -2.18557e-08, 1.36181, 0.628685, -2.27702)

[node name="OmniLight3D" type="OmniLight3D" parent="Torch2"]
transform = Transform3D(1, 1.16322e-10, 0, 4.03705e-14, 1, 7.45365e-09, 0, -7.45364e-09, 1, 1.37797, 1.52407, -4.21822)
light_color = Color(1, 0.6895, 0.31, 1)
omni_range = 12.4328

[node name="Torch3" parent="." instance=ExtResource("2_mbleo")]
transform = Transform3D(-0.0118293, 0.0243225, -0.999634, 0.000981517, 0.999704, 0.0243125, 0.99993, -0.000693557, -0.0118497, 1.47263, 48.4289, 2.28718)

[node name="Sketchfab_model" parent="Torch3" index="0"]
transform = Transform3D(-0.5, 4.37114e-08, 0, 1.91069e-15, 2.18557e-08, 0.5, 4.37114e-08, 0.5, -2.18557e-08, 1.36181, 0.628685, -2.27702)

[node name="OmniLight3D" type="OmniLight3D" parent="Torch3"]
transform = Transform3D(1, 1.16322e-10, 0, 4.03705e-14, 1, 7.45365e-09, 0, -7.45364e-09, 1, 1.37797, 1.52407, -4.21822)
light_color = Color(1, 0.6895, 0.31, 1)
omni_range = 12.4328

[node name="Torch4" parent="." instance=ExtResource("2_mbleo")]
transform = Transform3D(0.0263038, -0.0478212, 0.99851, 0.00125932, 0.998856, 0.0478046, -0.999653, 0, 0.0263339, -1.46215, 48.4289, 4.76864)

[node name="Sketchfab_model" parent="Torch4" index="0"]
transform = Transform3D(-0.5, 4.37114e-08, 0, 1.91069e-15, 2.18557e-08, 0.5, 4.37114e-08, 0.5, -2.18557e-08, 1.36181, 0.628685, -2.27702)

[node name="OmniLight3D" type="OmniLight3D" parent="Torch4"]
transform = Transform3D(1, 1.16322e-10, 0, 4.03705e-14, 1, 7.45365e-09, 0, -7.45364e-09, 1, 1.37797, 1.52407, -4.21822)
light_color = Color(1, 0.6895, 0.31, 1)
omni_range = 12.4328

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i53wi")

[node name="FogVolume" type="FogVolume" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0682571, 27.677, -0.160522)
size = Vector3(6.21753, 36.6761, 6.01978)

[node name="Touchable" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 45.082, 0)
script = ExtResource("4_6nvnc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Touchable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0318298, 0, 0.101135)
shape = SubResource("BoxShape3D_emilf")

[node name="Timer" type="Timer" parent="Touchable"]

[node name="Timer2" type="Timer" parent="Touchable"]

[node name="CoolIntermissionCamera" type="CSGMesh3D" parent="."]
transform = Transform3D(22.4113, 0, 0, 0, 13.3096, 0, 0, 0, 1, -4.33075, 16.6712, 44.0005)
mesh = SubResource("BoxMesh_bvu3m")
material = SubResource("StandardMaterial3D_lbioy")

[node name="Camera3D" type="Camera3D" parent="CoolIntermissionCamera"]
transform = Transform3D(0.0446204, 0, 0, 0, 0.0751337, 0, 0, 0, 1, 0, 0, 7.13173)

[node name="CoolThingy" type="Control" parent="CoolIntermissionCamera/Camera3D"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CoolIntermissionCamera/Camera3D/CoolThingy"]
libraries = {
"": SubResource("AnimationLibrary_edfyt")
}

[node name="TextureRect" type="TextureRect" parent="CoolIntermissionCamera/Camera3D/CoolThingy"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -100.5
offset_right = 225.0
offset_bottom = 100.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ri4j6")
stretch_mode = 2

[connection signal="area_entered" from="Touchable" to="Touchable" method="_on_area_entered"]
[connection signal="timeout" from="Touchable/Timer" to="Touchable" method="_on_timer_timeout"]
[connection signal="timeout" from="Touchable/Timer2" to="Touchable" method="_on_timer_2_timeout"]

[editable path="Torch"]
[editable path="Torch2"]
[editable path="Torch3"]
[editable path="Torch4"]
